# CaloDetOnly

./: .cproject  .project  CMakeLists.txt  CaloDetOnly.cc  README.md
include/: DetectorConstruction.hh  PurgMagTabulatedField3D.hh  SamplingSection.hh
src/: DetectorConstruction.cc  DetectorMessenger.cc  PrimaryGeneratorAction.cc  PurgMagTabulatedField3D.cc  SamplingSection.cc
